<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/physics"
        android:layout_width="200dp"
        android:onClick="overview"
        android:layout_height="80dp"
        android:text="@string/physics"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/math"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/math"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/physics"
        android:onClick="overview"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/marvel"
        android:onClick="overview"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/marvel"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/math"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>